# antilogviewer

./: .antiformat  .appveyor.yml  CMakeLists.txt  Makefile  README.md  antilogviewer.pro
src/: CMakeLists.txt  antilogviewer.cpp  antilogviewer.h  antilogviewer.pro  constants.h  default_palettes.h  default_settings.h  helpers.cpp  helpers.h  layout_helper.cpp  layout_helper.h  log_item.h  main.cpp  resources.rc  src.pro  table.cpp  table.h  table_model.cpp  table_model.h  table_view_hacks.cpp  table_view_hacks.h
src/chain_elements/: chain_element.cpp  chain_element.h  keyword_filter.cpp  keyword_filter.h  level_filter.cpp  level_filter.h  memory_storage.cpp  memory_storage.h  source_filter.cpp  source_filter.h  table_view.cpp  table_view.h  table_view_config.cpp  table_view_config.h  terminator.cpp  terminator.h  text_input.cpp  text_input.h  udp_socket.cpp  udp_socket.h
src/dialogs/: export_dialog.cpp  export_dialog.h  table_view_config.cpp
tests/: CMakeLists.txt  test_sink.h  tests.pro  tst_utils.cpp
utils/: colors.html  genudp.py
